# fmbq-timer

./: .gitignore  AndroidManifest.xml  Cargo.toml  Dockerfile  Makefile  README.md  app.css  app.js  build.rs  devenv.nix  docker-compose.yaml  docker-compose.yml  index.html  rust-toolchain.toml  service-worker.js  timer.webmanifest  tsconfig.json
.flox/: env.json
.flox/env/: manifest.toml
.github/: main.workflow
.github/workflows/: ci.yml  main.yml
config/: deployment.yaml
crates/android-vibrator/: Cargo.toml
crates/android-vibrator/src/: lib.rs
crates/appstorage/: Cargo.toml
crates/appstorage/src/: lib.rs  storage.rs
crates/appstorage/src/backends/: file.rs  memory.rs  mod.rs  web.rs  windows_storage.rs
deploy/: prod.yaml
nix/android-flake/: flake.nix
res/drawable-v24/: ic_launcher_background.xml
src/: alarm.ts  app.ts  audio.ts  audio_player.rs  components.ts  install.ts  lib.rs  main.rs  run.rs  service-worker.ts  settings.ts  state.ts  timer.ts
src/app/: audio.rs  colors.rs  mod.rs  settings.rs  timer.rs  widgets.rs
src/audio/: queue.rs
src/components/: countdown-buttons.ts  countdown-circle.ts  icons.ts  main-page.ts  reset-button.ts  settings-page.ts  sound-picker.ts  timer-page.ts
src/platform/: android.rs
src/platform/android/: audio_player.rs  mod.rs
src/sounds/: mod.rs
static/: app.css  index.html  timer.webmanifest
static/.well-known/: assetlinks.json
themes/: dark.css  joyful.css  light.css
