[package]
name = "fmbqtimer"
version = "2.0.0-alpha.4"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
crossbeam-utils = "0.8"
hound = "3.5"
include_dir = "0.7.3"
log = "0.4"
log-panics = "2.1"
triple_buffer = "6.2"

[dependencies.appstorage]
path = "crates/appstorage"

[dependencies.eframe]
version = "0.23"
default-features = false
features = [
    "glow",
    "default_fonts",
    "android-native-activity",
    "wayland",
    "x11",
]

[target.'cfg(target_os = "linux")'.dependencies.winit]
version = "0.28"
default-features = false
features = ["wayland-csd-adwaita"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
android-wakelock = "0.1"
jni = "0.21"

[target.'cfg(target_os = "android")'.dependencies.ndk]
version = "0.7"
features = ["audio"]

[target.'cfg(target_os = "android")'.dependencies.winit]
version = "0.28"
default-features = false
features = ["android-native-activity"]

[target.'cfg(not(target_os = "android"))'.dependencies]
cpal = "0.15"
env_logger = "0.10"

[build-dependencies.time]
version = "0.3"
features = ["formatting", "local-offset"]

# Pull in backported fix for volume keys being captured and ignored by default,
# instead of being handled the default way by Android. See
# https://github.com/rust-windowing/winit/pull/2748.
[patch.crates-io.winit]
git = "https://github.com/sagebind/winit.git"
branch = "android-activity-relaunch-patches"

[workspace]
members = ["crates/*"]
