[package]
name = "appstorage"
version = "0.1.0"
edition = "2021"
description = "Cross-platform key-value storage for your application"

[features]
default = ["windows-storage"]
windows-storage = ["windows"]

[dependencies]
log = "0.4"
serde = "1"

# WinRT Storage API on Windows
[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = ["Foundation_Collections", "Storage"]
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
app_dirs2 = "2.5"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["Storage", "Window"]
